Closes #761 - review: Rename aHEX to aPERCENTAGE for alpha colors.
Percentages are more intuitive than decimal.

--- a/app/src/main/res/layout/pocket_video_item.xml
+++ b/app/src/main/res/layout/pocket_video_item.xml
@@ -39,7 +39,7 @@
             android:paddingEnd="12dp"
             android:paddingTop="12dp"
             android:paddingBottom="2dp"
-            android:textColor="@color/photonGrey10_a99"
+            android:textColor="@color/photonGrey10_a60p"
             android:textSize="12sp"
             android:textAllCaps="true"
             android:fontFamily="@string/font_roboto_regular"
