Issue #767: Add placeholder pocket megatile button.

--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -110,6 +110,19 @@
             android:textColor="@color/tv_white" />
     </LinearLayout>
 
+    <!-- TODO: #774: Make me a megatile! -->
+    <Button
+        android:id="@+id/pocketVideoFeedButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/pocket_brand_name"
+        android:textColor="@color/tv_white"
+        android:background="@color/pocket_coral"
+        />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/tileContainer"
         android:clipToPadding="false"
