Issue #767: Set thumbnail view background color to grey.
This is what's used in the mock for the loading screen: I felt this
would be an appropriate color while we wait for images.

--- a/app/src/main/res/layout/pocket_video_item.xml
+++ b/app/src/main/res/layout/pocket_video_item.xml
@@ -26,7 +26,7 @@
             android:id="@+id/videoThumbnailView"
             android:layout_width="match_parent"
             android:layout_height="135dp"
-            tools:background="#e00"
+            android:background="@color/photonGrey50"
             tools:ignore="ContentDescription" />
 
         <!-- Background colors are set dynamically based on parent focus state.
