Closes #857: Don't dynamically change textAppearance on Pocket feed.
The choice of font was speculative - I didn't get a response from Amin
yet - but it was Medium or Regular.

--- a/app/src/main/res/layout/pocket_video_item.xml
+++ b/app/src/main/res/layout/pocket_video_item.xml
@@ -59,11 +59,11 @@
             android:maxLines="3"
             android:ellipsize="end"
             android:textSize="16sp"
+            android:fontFamily="@string/font_roboto_medium"
             android:lineSpacingExtra="8dp"
             tools:background="@color/photonGrey60"
             tools:text="Mirror-Polished Japanese Foil Ball Challenge Crushed this is a really long line so we can test that there are a maximum"
             tools:textColor="@color/photonGrey10"
-            tools:textAppearance="@style/RobotoMediumTextAppearance"
             />
 
     </LinearLayout>
