--- a/app/src/main/res/layout/pocket_video_mega_tile.xml
+++ b/app/src/main/res/layout/pocket_video_mega_tile.xml
@@ -7,16 +7,17 @@
     tools:context="org.mozilla.focus.MainActivity"
     tools:parentTag="org.mozilla.focus.home.pocket.PocketVideoMegaTile">
 
-    <!-- We set the SVG & thumbnails in code: see the code for details. -->
+    <!-- To ensure this lays out consistently, we declare some attributes in code.
+
+         We set the SVG & thumbnails in code: see the code for details. -->
     <ImageView
         android:id="@+id/pocketWordmarkView"
-        android:layout_width="115.45dp"
+        android:layout_width="0dp"
         android:layout_height="30.5dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
+        android:layout_weight="1"
         android:contentDescription="@null"
         tools:src="@drawable/ic_pocket_and_wordmark"
-        tools:tint="@color/tv_white"
+        tools:tint="@color/photonGrey10"
         />
 
     <ImageView
