--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -8,13 +8,19 @@
     android:background="@color/browser_overlay_background"
     android:orientation="vertical"
     android:descendantFocusability="afterDescendants"
-    android:padding="20dp">
+    android:paddingTop="27dp"
+    android:paddingBottom="27dp"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="57dp"
+        android:layout_marginEnd="57dp"
+        android:layout_marginBottom="27dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        >
 
         <include layout="@layout/browser_overlay_top_nav"/>
     </LinearLayout>
