--- a/app/src/main/res/layout/browser_overlay_top_nav.xml
+++ b/app/src/main/res/layout/browser_overlay_top_nav.xml
@@ -51,6 +51,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_firefox_and_workmark" />
+        android:src="@drawable/ic_firefox_and_workmark"
+        android:contentDescription="@null" />
 
 </merge>
