--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -13,6 +13,7 @@
     >
 
     <LinearLayout
+        android:id="@+id/topNavContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="57dp"
