--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -57,6 +57,7 @@
         android:layout_marginEnd="45dp"
         android:background="@drawable/pocket_video_mega_tile_background"
         android:focusable="true"
+        android:nextFocusUp="@id/navUrlInput"
         />
 
     <android.support.v7.widget.RecyclerView
