--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -59,6 +59,7 @@
         android:layout_height="124dp"
         android:layout_marginStart="45dp"
         android:layout_marginEnd="45dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/pocket_video_mega_tile_background"
         android:focusable="true"
         android:nextFocusUp="@id/navUrlInput"
@@ -67,10 +68,11 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/tileContainer"
         android:clipToPadding="false"
-        android:paddingTop="10dp"
         android:clipChildren="false"
         android:layout_width="match_parent"
         android:layout_height="350dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginEnd="45dp"
         android:paddingBottom="18dp"
         android:background="@android:color/transparent"/>
 
