--- a/app/src/main/res/layout/pocket_video_mega_tile.xml
+++ b/app/src/main/res/layout/pocket_video_mega_tile.xml
@@ -22,37 +22,25 @@
 
     <ImageView
         android:id="@+id/thumbnail1View"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
+        style="@style/PocketVideoMegaTileThumbnail"
         android:contentDescription="@null"
         />
 
     <ImageView
         android:id="@+id/thumbnail2View"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
+        style="@style/PocketVideoMegaTileThumbnail"
         android:contentDescription="@null"
         />
 
     <ImageView
         android:id="@+id/thumbnail3View"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
+        style="@style/PocketVideoMegaTileThumbnail"
         android:contentDescription="@null"
         />
 
     <ImageView
         android:id="@+id/thumbnail4View"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
+        style="@style/PocketVideoMegaTileThumbnail"
         android:contentDescription="@null"
         />
 
