--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,4 +34,7 @@
     <dimen name="pocket_video_item_horizontal_margin">12dp</dimen>
 
     <dimen name="pocket_video_mega_tile_thumbnail_corner_radius">4dp</dimen>
+
+    <!-- This value was chosen experimentally: see usages for criteria. -->
+    <dimen name="browser_overlay_delta_scroll_padding">100dp</dimen>
 </resources>
