--- a/app/src/main/res/layout/home_tile.xml
+++ b/app/src/main/res/layout/home_tile.xml
@@ -2,6 +2,9 @@
 <!-- This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
+
+<!-- We add negative margins on the parent view to undo the effects of `marginBottom`: see the
+     code for details. -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:id="@+id/home_tile"
@@ -14,7 +17,7 @@
               android:clipChildren="false"
               android:layout_marginStart="12dp"
               android:layout_marginEnd="12dp"
-              android:layout_marginBottom="24dp">
+              android:layout_marginBottom="@dimen/home_tile_margin_bottom">
 
     <LinearLayout
         android:layout_width="match_parent"
