--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -4,13 +4,12 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <org.mozilla.focus.browser.BrowserNavigationOverlayScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/overlayScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:focusable="false"
     android:scrollbars="none">
-    <!-- Fill viewport? When don't have enough tiles. -->
 
     <LinearLayout
         android:layout_width="match_parent"
