Issue #878: Add Pocket megatile contentDescription.

--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -63,6 +63,7 @@
             android:nextFocusUp="@id/topNavContainer"
             />
 
+        <!-- Content description added in code. -->
         <org.mozilla.focus.home.pocket.PocketVideoMegaTile
             android:id="@+id/pocketVideoMegaTileView"
             android:layout_width="match_parent"
