Closes #828: Added new AppTheme.Transparent, background color for pocket onboarding, and udpated AndroidManifest to include PocketOnboardingActivity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,8 @@
 
     <color name="browser_overlay_background">#e6000000</color>
 
+    <color name="pocket_onboarding_background">#cc38383d</color>
+
     <color name="button_highlight">#64ffffff</color>
     <color name="button_default">@color/translucent_tv_ink</color>
     <color name="button_disabled">@color/tv_ink</color>
