Closes #894: Two clicks required to select turbo mode in on boarding screen and Closes #828: Stack activities on top of each other on first launch

--- a/app/src/main/res/layout/fragment_pocket_video.xml
+++ b/app/src/main/res/layout/fragment_pocket_video.xml
@@ -67,6 +67,7 @@
 
     <ImageView
         android:id="@+id/pocketHelpButton"
+        tools:ignore="ContentDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="400dp"
