--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -50,6 +50,7 @@
             android:layout_marginBottom="24dp"
             android:background="@drawable/nav_urlbar_background"
             android:hint="@string/urlbar_hint"
+            android:textColorHint="@color/photonGrey10_a80p"
             android:imeOptions="actionGo|flagNoExtractUi|flagNoFullscreen"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
@@ -58,7 +59,7 @@
             android:importantForAutofill="no"
             android:cursorVisible="false"
             android:textIsSelectable="false"
-            android:textColor="@color/tv_white"
+            android:textColor="@color/tv_grey10"
             android:nextFocusRight="@id/navUrlInput"
             android:nextFocusUp="@id/topNavContainer"
             />
